...
    <string name="pref_query_history_size_max_display_value" translatable="false">200</string>
    <string name="pref_query_history_size_summary">Number of words in history: 20</string>
    <string name="pref_query_history_size_default_value" translatable="false">70</string>
    <string name="pref_query_history_size_min_value" translatable="false">0</string>
    <string name="pref_query_history_size_max_value" translatable="false">200</string>
    <string name="input_query">Search Me!</string>
    <string name="DICT">DICT</string>
    <string name="CONJ">CONJ</string>
    <string name="Convert">あ⇔A</string>
    <string name="button_SearchByRadical">女+子 ⇒ 好</string>
    <string name="button_Decompose">好 ⇒ 女+子</string>
    <string name="SpeechToTextUserPromptEnglish">Please state your query in English.</string>
    <string name="SpeechToTextUserPromptFrench">Please state your query in French.</string>
    <string name="SpeechToTextUserPromptSpanish">Please state your query in Spanish.</string>
...
    <string name="select_the_radical">Select the Radical</string>
    <string name="hyphen" translatable="false">-</string>
    <string name="vertical_separator" translatable="false">|</string>
    <string name="kanji_structure">kanji structure</string>
    <string name="no_elements_found">No Elements Found.</string>
    <string name="general">General</string>
    <string name="search">Search</string>
    <string name="languages">Languages</string>
    <string name="speech">Speech</string>
    <string name="optical_character_recognition">Optical Character Recognition</string>
    <string name="decomposition">Decomposition</string>
    <string name="verb">verb</string>
    <string name="from_alt_form">From alt. form</string>
...
    <string name="additional_stroke">additional stroke</string>
    <string name="number_abbrev_">No.</string>
    <string name="with">with</string>
    <string name="special_symbol_with_meaning">Special symbol with meaning</string>
    <string name="strokes">strokes</string>
    <string name="stroke">stroke.</string>
    <string name="radical">Radical</string>
    <string name="radical_variant">radical variant</string>
    <string name="simplification">simplification</string>
    <string name="english_meanings_available_only">(English meanings available only)</string>

</resources>

