...
    android:clickable="true"
    android:focusableInTouchMode="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:id="@+id/VerbChooserSpinnerBox"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Spinner
            android:id="@+id/VerbChooserSpinner"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:singleLine="false"
            android:background="#BFFFFFFF"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="4dp"
...
